crates/gridwell-writer-rtf/tests/snapshots/snapshots__min-max-width.snap
---
source: crates/gridwell-writer-rtf/tests/snapshots.rs
expression: out
---
{\rtf1\ansi\deff0
{\fonttbl{\f0 Arial;}}
{\colortbl ;\red0\green0\blue0;\red255\green255\blue255;}
\trowd\trhdr\cellx2160\cellx4320
\pard\intbl\plain\b Constrained\cell
\pard\intbl\plain\b Free\cell
\row
\trowd\cellx2160\cellx4320
\pard\intbl\plain clamped between 80 and 200px\cell
\pard\intbl\plain grows freely\cell
\row
}
