crates/gridwell-writer-rtf/tests/snapshots/snapshots__minimal-1x1.snap
---
source: crates/gridwell-writer-rtf/tests/snapshots.rs
expression: out
---
{\rtf1\ansi\deff0
{\fonttbl{\f0 Arial;}}
{\colortbl ;\red0\green0\blue0;\red255\green255\blue255;}
\trowd\trhdr\cellx2160
\pard\intbl\plain\b Value\cell
\row
\trowd\cellx2160
\pard\intbl\plain Hello\cell
\row
}
