crates/gridwell-writer-rtf/tests/snapshots/snapshots__mixed-markup.snap
---
source: crates/gridwell-writer-rtf/tests/snapshots.rs
expression: out
---
{\rtf1\ansi\deff0
{\fonttbl{\f0 Arial;}}
{\colortbl ;\red0\green0\blue0;\red255\green255\blue255;\red230\green126\blue34;}
\trowd\trhdr\cellx2160
\pard\intbl\b Message\cell
\row
\trowd\cellx2160
\pard\intbl Status: {\b\cf3 degraded}\line Retry advised{\super \u8224?}\cell
\row
\par
\pard{\fs18 {\super \u8224?} See runbook section 4.}\par
}
