crates/gridwell-writer-rtf/tests/snapshots/snapshots__mixed-spans.snap
---
source: crates/gridwell-writer-rtf/tests/snapshots.rs
expression: out
---
{\rtf1\ansi\deff0
{\fonttbl{\f0 Arial;}}
{\colortbl ;\red0\green0\blue0;\red255\green255\blue255;}
\trowd\trhdr\cellx2160\cellx4320\cellx6480
\pard\intbl\b A\cell
\pard\intbl\b B\cell
\pard\intbl\b C\cell
\row
\trowd\clvmgf\cellx4320\cellx6480
\pard\intbl 2x2 block\cell
\pard\intbl top-right\cell
\row
\trowd\clvmrg\cellx4320\cellx6480
\pard\intbl\cell
\pard\intbl mid-right\cell
\row
\trowd\cellx2160\cellx4320\cellx6480
\pard\intbl x\cell
\pard\intbl y\cell
\pard\intbl z\cell
\row
}
