crates/gridwell-writer-rtf/tests/snapshots/snapshots__multi-col-stub.snap
---
source: crates/gridwell-writer-rtf/tests/snapshots.rs
expression: out
---
{\rtf1\ansi\deff0
{\fonttbl{\f0 Arial;}}
{\colortbl ;\red0\green0\blue0;\red255\green255\blue255;}
\trowd\trhdr\cellx2160\cellx4320\cellx6480\cellx8640
\pard\intbl\plain\b Region\cell
\pard\intbl\plain\b City\cell
\pard\intbl\plain\b Sales\cell
\pard\intbl\plain\b Growth\cell
\row
\trowd\cellx2160\cellx4320\cellx6480\cellx8640
\pard\intbl\plain East\cell
\pard\intbl\plain NYC\cell
\pard\intbl\plain 60\cell
\pard\intbl\plain 3%\cell
\row
\trowd\cellx2160\cellx4320\cellx6480\cellx8640
\pard\intbl\plain West\cell
\pard\intbl\plain LA\cell
\pard\intbl\plain 50\cell
\pard\intbl\plain 2%\cell
\row
}
