crates/gridwell-writer-rtf/tests/snapshots/snapshots__narrow-wide-mix.snap
---
source: crates/gridwell-writer-rtf/tests/snapshots.rs
expression: out
---
{\rtf1\ansi\deff0
{\fonttbl{\f0 Arial;}}
{\colortbl ;\red0\green0\blue0;\red255\green255\blue255;}
\trowd\trhdr\cellx600\cellx2760
\pard\intbl\qr\b #\cell
\pard\intbl\b Description\cell
\row
\trowd\cellx600\cellx2760
\pard\intbl\qr 1\cell
\pard\intbl A long descriptive line of text.\cell
\row
\trowd\cellx600\cellx2760
\pard\intbl\qr 2\cell
\pard\intbl Another spanning description here.\cell
\row
}
