crates/gridwell-writer-rtf/tests/snapshots/snapshots__nested-spanners.snap
---
source: crates/gridwell-writer-rtf/tests/snapshots.rs
expression: out
---
{\rtf1\ansi\deff0
{\fonttbl{\f0 Arial;}}
{\colortbl ;\red0\green0\blue0;\red255\green255\blue255;}
\trowd\trhdr\cellx4320\cellx8640
\pard\intbl\b Group A\cell
\pard\intbl\b Group B\cell
\row
\trowd\trhdr\cellx2160\cellx4320\cellx6480\cellx8640
\pard\intbl\b A1\cell
\pard\intbl\b A2\cell
\pard\intbl\b B1\cell
\pard\intbl\b B2\cell
\row
\trowd\cellx2160\cellx4320\cellx6480\cellx8640
\pard\intbl 1\cell
\pard\intbl 2\cell
\pard\intbl 3\cell
\pard\intbl 4\cell
\row
\trowd\cellx2160\cellx4320\cellx6480\cellx8640
\pard\intbl 5\cell
\pard\intbl 6\cell
\pard\intbl 7\cell
\pard\intbl 8\cell
\row
}
