crates/gridwell-writer-rtf/tests/snapshots/snapshots__numeric-right-align.snap
---
source: crates/gridwell-writer-rtf/tests/snapshots.rs
expression: out
---
{\rtf1\ansi\deff0
{\fonttbl{\f0 Arial;}}
{\colortbl ;\red0\green0\blue0;\red255\green255\blue255;}
\trowd\trhdr\cellx2160\cellx4320\cellx6480
\pard\intbl\b Product\cell
\pard\intbl\qr\b Qty\cell
\pard\intbl\qr\b Price\cell
\row
\trowd\cellx2160\cellx4320\cellx6480
\pard\intbl Widget\cell
\pard\intbl\qr 12\cell
\pard\intbl\qr 3.50\cell
\row
\trowd\cellx2160\cellx4320\cellx6480
\pard\intbl Gadget\cell
\pard\intbl\qr 4\cell
\pard\intbl\qr 19.99\cell
\row
}
