crates/gridwell-writer-rtf/tests/snapshots/snapshots__per-column-align.snap
---
source: crates/gridwell-writer-rtf/tests/snapshots.rs
expression: out
---
{\rtf1\ansi\deff0
{\fonttbl{\f0 Arial;}}
{\colortbl ;\red0\green0\blue0;\red255\green255\blue255;}
\trowd\trhdr\cellx2160\cellx4320\cellx6480\cellx8640
\pard\intbl\plain\b L\cell
\pard\intbl\plain\qc\b C\cell
\pard\intbl\plain\qr\b R\cell
\pard\intbl\plain\qj\b J\cell
\row
\trowd\cellx2160\cellx4320\cellx6480\cellx8640
\pard\intbl\plain left\cell
\pard\intbl\plain\qc center\cell
\pard\intbl\plain\qr right\cell
\pard\intbl\plain\qj justified text here\cell
\row
}
