crates/gridwell-writer-rtf/tests/snapshots/snapshots__raw-html.snap
---
source: crates/gridwell-writer-rtf/tests/snapshots.rs
expression: out
---
{\rtf1\ansi\deff0
{\fonttbl{\f0 Arial;}}
{\colortbl ;\red0\green0\blue0;\red255\green255\blue255;}
\trowd\trhdr\cellx2160\cellx4320
\pard\intbl\plain\b Kind\cell
\pard\intbl\plain\b Rendered\cell
\row
\trowd\cellx2160\cellx4320
\pard\intbl\plain bold+italic\cell
\pard\intbl\plain \cell
\row
}
